--- a/_posts/2000-01-03-details.md
+++ b/_posts/2000-01-03-details.md
@@ -1,11 +1,13 @@
 ---
-title: "setup details"
+title: "BIM"
 bg: orange
-color: black
-fa-icon: toggle-on
+color: '#fafafa'
+fa-icon: fa fa-university
 ---
 
-## Setup as user homepage
+#### Building Infomation Modeling
+
+# BIM
 
 - Go click **fork** on the [github project page](https://github.com/t413/SinglePaged)
 - Rename your new repository to `**username**.github.io`. (click settings in the right column)
