--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -5,19 +5,15 @@ color: black
 style: center
 ---
 
-### *whoa, hey an open-source*
 {: .text-purple}
 
 <span class="fa-stack subtlecircle" style="font-size:100px; background:rgba(255,166,0,0.1)">
-  <i class="fa fa-circle fa-stack-2x text-white"></i>
-  <i class="fa fa-bicycle fa-stack-1x text-orange"></i>
+  <img src="img/logo.jpg" style="border-radius: 100px;box-shadow: 1px 1px 3px #333" />
 </span>
 
 # 同济大学计算机协会
 {: .text-purple}
 
 
-…it's focused on delivering information quickly, easily, configurably, and stylishly!
-
-Want to make a single-page site to show off something cool? Go [fork me on github!](https://github.com/t413/SinglePaged)
+其实我们是一个等文案协会~!
 
