--- a/_posts/2000-01-05-usage.md
+++ b/_posts/2000-01-05-usage.md
@@ -1,9 +1,12 @@
 ---
-title: "usage"
+title: "G&C"
 bg: '#63BD2F'
 color: white
-fa-icon: plug
+fa-icon: fa fa-gamepad
 ---
+#### Games & Graphics
+
+# G&C
 
 Alright, you've got a clean copy and are ready to push some schmancy pages for the world to ogle at.
 
