--- a/_posts/2000-01-06-updating.md
+++ b/_posts/2000-01-06-updating.md
@@ -1,11 +1,12 @@
 ---
-title: "updating"
+title: "LUG"
 bg: purple
 color: white
-fa-icon: cloud-upload
+fa-icon: fa fa-linux
 ---
+#### Linux User Group
 
-## Updating
+# LUG
 
 So you've got a copy running and there's some new update? Let's update!
 
