--- a/_posts/2000-01-07-video.md
+++ b/_posts/2000-01-07-video.md
@@ -1,23 +1,20 @@
 ---
-title: "video"
+title: "end"
 bg: turquoise
 color: white
-fa-icon: film
+fa-icon: fa fa-child
 ---
+ 
+# Welcome
 
-Having an **embedded media** (photos and video) is often inflexible with a dynamic and **responsive design**.
-
-### Embed your video like this:
 {: .left}
 
 {% highlight html linenos=table %}
-<div class="icontain">
-  <iframe src="//www.youtube.com/embed/8yis7GzlXNM" allowfullscreen></iframe>
+<div class="welcome">
+  <p>欢迎参加同济大学计算机协会</p>
 </div>
 {% endhighlight %}
 
 It'll play like this funny video below! Try resizing the page!
 
 Photo layouts are also really cool and dynamically resizable. Check out the photos/gallery section at [magiciansanfrancisco.com](http://magiciansanfrancisco.com) for a demo and see [the source code](https://github.com/strongrobert/MagicianSanFrancisco) for how.
-
-<div class="icontain"><iframe src="//www.youtube.com/embed/8yis7GzlXNM" allowfullscreen></iframe></div>
