--- a/_posts/2000-01-02-web.md
+++ b/_posts/2000-01-02-web.md
@@ -9,9 +9,6 @@ fa-icon: fa fa-html5
 
 # **WEB**
 
-{% highlight text linenos=table %}
-	让我们从头学起,比如这个看起来像海报的网页.
-{% endhighlight %}
 
 {: style="text-align: center;"}
 
@@ -19,6 +16,8 @@ fa-icon: fa fa-html5
 
 #### **还在苦于有完美无缺的点子,却只差一个程序员吗?**
 
-#### 来Web前端小组,一步步实现自己的梦想.
+#### 让我们从头学起,比如你现在所看到的这个网页.
+
+#### 来Web前端小组,一步步实现自己的梦想 !
 
 
