--- a/_posts/2000-01-05-gc.md
+++ b/_posts/2000-01-05-gc.md
@@ -11,7 +11,7 @@ fa-icon: fa fa-gamepad
 
 
  {:style="text-align: center;"}
- `Games&Graphics`组主要组织有关`电子游戏`和`图形学`相关的开发，当然也会涉及到游戏界几乎所有的方面。
+ `Games & Graphics`组主要组织有关**`电子游戏`**和**`图形学`**相关的开发，当然也会涉及到游戏界几乎所有的方面。
 
 ####**我们并不指望做出多么完整的东西，我们只想聚在一起，学点感兴趣的东西。**
 
