--- a/_posts/2000-01-03-bim.md
+++ b/_posts/2000-01-03-bim.md
@@ -5,7 +5,7 @@ color: '#fff'
 fa-icon: fa fa-university
 ---
 
-#### Building Infomation Modeling
+#### Building Information Modeling
 
 # **BIM**
 
