add button & weibo

--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -15,6 +15,8 @@ style: center
 {: .text-purple}
 Tongji Computer Association
 
+<button class="join" onclick="window.location.href='http://form.mikecrm.com/f.php?t=YBqiCO'">立即报名参加</button>
+
 
 
 
