--- a/_posts/2000-01-07-welcome.md
+++ b/_posts/2000-01-07-welcome.md
@@ -12,9 +12,13 @@ fa-icon: fa fa-child
 {: style="padding-top: 100px;"}
 
 {% highlight html linenos=table %}
-<div class="welcome">
-  <p>欢迎参加同济大学计算机协会</p>
-</div>
+	<div class="welcome">
+	  <p>欢迎参加同济大学计算机协会</p>
+	</div>
 {% endhighlight %}
 {: style="margin-top: 100px;"}
+
+{: .center}
+<button class="join" onclick="window.location.href='http://form.mikecrm.com/f.php?t=YBqiCO'">立即报名参加</button>
+
 
