--- a/_posts/2000-01-05-gg.md
+++ b/_posts/2000-01-05-gg.md
@@ -1,12 +1,12 @@
 ---
-title: "G&C"
+title: "G&G"
 bg: '#63BD2F'
 color: white
 fa-icon: fa fa-gamepad
 ---
 #### Games & Graphics
 
-# **G&C**
+# **G&G**
 
 
 
